--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -18,7 +18,7 @@
         <div class="row">
             <div class="col-12">
                 <h4 class="text-center font-weight-light py-3">Pick 'N' Mix</h4>
-                <a class="btn btn-lg pink-btn" href="">Build</a>
+                <a class="btn btn-lg pink-btn" href="{% url 'scoops' %}">Build</a>
             </div>
         </div>
         <div class="row">
