--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -12,7 +12,7 @@
                 </a>
                 <div class="dropdown-menu font-weight-light" aria-labelledby="navbarDropdown1">
                     <a class="dropdown-item" href="{% url 'scoops' %}">Build</a>
-                    <a class="dropdown-item" href="#">Bags</a>
+                    <a class="dropdown-item" href="{% url 'bags' %}">Bags</a>
                 </div>
             </li>
             <li class="nav-item">
