--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -18,7 +18,7 @@
             <li class="nav-item">
                 <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="#">
                     <div class="text-center-lg">
-                        <i class="fas fa-shopping-bag fa-lg"></i>
+                        <i class="fas fa-shopping-cart fa-lg"></i>
                         <p class="d-inline">
                             {% if grand_total %}
                                 £{{ grand_total|floatformat:2 }}
