--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -16,7 +16,7 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="#">
+                <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_cart' %}">
                     <div class="text-center-lg">
                         <i class="fas fa-shopping-cart fa-lg"></i>
                         <p class="d-inline">
