--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -11,7 +11,7 @@
         </div>
         <div class="row">
             <div class="col">
-                {% if bag_items %}
+                {% if cart_items %}
                     <div class="table-responsive">
                     </div>
                 {% else %}
