--- a/sweets/templates/sweets/bags.html
+++ b/sweets/templates/sweets/bags.html
@@ -13,27 +13,38 @@
                 <img class="img-big border-radius-curve" src="{% static 'images/yommiesbag.jpg' %}" alt="Bag of yommies pick 'n' mix">
             </div>
             <div class="col-md-6">
-                <form>
+                <form action="{% url 'add_to_cart' %}" method="POST">
+                    {% csrf_token %}
                     <div class="form-group">
                         <div class="d-flex">
-                            <select class="form-control form-control-lg" name="scoop1" required>
+                            <select class="form-control form-control-lg" name="bag_choice" id="bagChoice" required>
                                 <option value="">Choose your bag</option>
                                 {% for bag in bags %}
-                                    <option value="{{ bag.name }}">{{ bag.name }}</option>
+                                    <option value='{"name":"{{ bag.name }}", "id":"{{ bag.id }}"}' data-item_id="{{ bag.id }}">{{ bag.name }}</option>
                                 {% endfor %}
                             </select>
                         </div>
                     </div>
                     <div class="form-group py-3">
                         <label for="quantity" class="d-inline">Quantity</label>
-                        <input class="d-inline form-control w-25" type="number" name="quantity" min="1" max="99" placeholder="1">
+                        <input class="d-inline form-control w-25" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ bag.id }}" id="id_qty_{{ bag.id }}">
                     </div>
                     <button type="submit" class="btn btn-primary mr-sm-2 my-">Add to cart</button>
                     <button type="submit" class="btn btn-warning mx-sm-2 my-1">Checkout</button>
+                    <input type="hidden" name="redirect_url" value="{{ request.path }}">
                     <div class="d-inline mx-sm-2 pt-1"><i class="fab fa-cc-stripe stripe-icon"></i></div>
                     <small class="text-center d-block pt-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam amet fugiat nam, harum soluta eveniet voluptatibus omnis quas mollitia eaque blanditiis quasi! Nostrum repellat quia iusto tempora neque amet ex.</small>
                 </form>
             </div>
         </div>
     </div>
+
+
+    <!-- <script>
+        $("#bagChoice").change(function () {
+            let choice = $(this).find(':selected').data('item_id')
+            console.log(choice)
+        });
+        
+    </script> -->
 {% endblock %}
