--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -13,6 +13,7 @@
             <div class="col">
                 {% if cart_items %}
                     <div class="table-responsive">
+                        {{ cart_items }}
                     </div>
                 {% else %}
                     <p class="mt-5">Your cart is empty!</p>
