--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,6 +6,10 @@ body {
     font-family: 'Comfortaa', cursive;
 }
 
+.text-baby-blue {
+    color: #B4CEFF!important;
+}
+
 .container-padding {
     padding: 10% 15%;
 }
@@ -136,7 +140,7 @@ body {
 
 .drop-down-menu {
   font-size: 2rem;
-  color: #fbf5f3;
+  color: #4d4c7d;
 }
 
 .navbar {
@@ -144,29 +148,30 @@ body {
 }
 .navbar .navbar-brand {
   color: #ffffff;
+  color: #4d4c7d;
 }
 .navbar .navbar-brand:hover,
 .navbar .navbar-brand:focus {
-  color: #4d4c7d;
+  color: #ffffff;
 }
 .navbar .navbar-text {
-  color: #ffffff;
+  color: #4d4c7d;
 }
 .navbar .navbar-text a {
   color: #4d4c7d;
 }
 .navbar .navbar-text a:hover,
 .navbar .navbar-text a:focus {
-  color: #4d4c7d; 
+  color: #ffffff;
 }
 .navbar .navbar-nav .nav-link {
-  color: #ffffff;
+  color: #4d4c7d;
   border-radius: .25rem;
   margin: 0 0.25em;
 }
 .navbar .navbar-nav .nav-link:not(.disabled):hover,
 .navbar .navbar-nav .nav-link:not(.disabled):focus {
-  color: #4d4c7d;
+  color: #ffffff;
 }
 .navbar .navbar-nav .dropdown-menu {
   background-color: #c0b4ff;
@@ -174,9 +179,10 @@ body {
 }
 .navbar .navbar-nav .dropdown-menu .dropdown-item {
   color: #ffffff;
+  color: #4d4c7d;
 }
 .navbar .navbar-nav .dropdown-menu .dropdown-item:hover {
-  color: #4d4c7d;
+  color: #ffffff;
   background-color: #c0b4ff;
 }
 
@@ -186,7 +192,7 @@ body {
 .navbar .navbar-nav .nav-item.show .nav-link,
 .navbar .navbar-nav .nav-item.show .nav-link:hover,
 .navbar .navbar-nav .nav-item.show .nav-link:focus {
-  color: #4d4c7d;
+  color: #ffffff;
 }
 
 .navbar-toggler:active {
@@ -194,17 +200,18 @@ body {
 }
 
 .navbar .navbar-toggler .navbar-toggler-icon {
-  color: #ffffff;
+  color: #4d4c7d;
 }
 .navbar .navbar-collapse,
 .navbar .navbar-form {
-  border-color: #ffffff;
+  border-color: #4d4c7d;
 }
 .navbar .navbar-link {
-  color: #ffffff;
+  color: #4d4c7d;
 }
 .navbar .navbar-link:hover {
   color: #4d4c7d;
+  color: #c0b4ff;
 }
 
 @media (max-width: 575px) {
