--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -4,19 +4,19 @@
         <i class="fas fa-bars drop-down-menu"></i>
     </button>
 
-    <div class="collapse navbar-collapse font-weight-light" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse font-weight-bold" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Sweets
                 </a>
-                <div class="dropdown-menu font-weight-light" aria-labelledby="navbarDropdown1">
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
                     <a class="dropdown-item" href="{% url 'scoops' %}">Build</a>
                     <a class="dropdown-item" href="{% url 'bags' %}">Bags</a>
                 </div>
             </li>
             <li class="nav-item">
-                <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_cart' %}">
+                <a class="{% if grand_total %}font-weight-bold{% else %}{% endif %} nav-link" href="{% url 'view_cart' %}">
                     <div class="text-center-lg">
                         <i class="fas fa-shopping-cart fa-lg"></i>
                         <p class="d-inline">
