--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 
-    <div class="container-fluid view-height-100 container-padding text-center mt-5 mt-lg-0">
-        <div class="row">
+    <div class="container-fluid container-padding text-center mt-5 mt-lg-0">
+        <div class="row mb-5">
             <div class="col">  
                 <h1>Your Shopping Cart</h1>
             </div>
@@ -12,8 +12,53 @@
         <div class="row">
             <div class="col">
                 {% if cart_items %}
-                    <div class="table-responsive">
-                        {{ cart_items }}
+                    <div class="table-responsive rounded">
+                        <table class="table table-sm table-borderless">
+                            <thead class="font-weight-bold">
+                                <tr>
+                                    <th scope="col">Item</th>
+                                    <th scope="col"></th>
+                                    <th scope="col">Price</th>
+                                    <th scope="col">Quantity</th>
+                                    <th scope="col">Total</th>
+                                </tr>
+                            </thead>
+                            {% for item in cart_items %}
+                                <tr>
+                                    <td class="p-3 w-25">
+                                        <img src="{% static 'images/yommiesbag.jpg' %}" class="img-big border-radius-curve" alt="yommies sweet bag">
+                                    </td>
+                                    <td class="py-3 text-left">
+                                        <p>{{ item.item.name }}</p>
+                                    </td>
+                                    <td class="py-3">
+                                        <p>{{ item.item.price }}</p>
+                                    </td>
+                                    <td class="py-3 w-25">
+                                        <p>{{ item.quantity }}</p>
+                                    </td>
+                                    <td class="py-3">
+                                        <p>{{ item.item.price }}</p>
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                            <tr>
+                                <td colspan="5" class="text-right">
+                                    <h6><strong>Cart Total: £{{ total|floatformat:2 }}</strong></h6>
+                                    <h6>Delivery: £{{ delivery|floatformat:2 }}</h6>
+                                    <h4><strong>Grand Total: £{{ grand_total|floatformat:2 }}</strong></h4>
+                                    {% if free_delivery_delta > 0 %}
+                                        <p>You are eligible for free delivery if you spend <strong>£{{ free_delivery_delta }}</strong> more!</p>
+                                    {% endif %}
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="5" class="text-right">
+                                    <a href="" class="btn btn-lg pink-btn mx-2">Return</a>
+                                    <a href="" class="btn btn-lg pink-btn mx-2">Checkout</a>
+                                </td>
+                            </tr>
+                        </table>
                     </div>
                 {% else %}
                     <p class="mt-5">Your cart is empty!</p>
