--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -16,11 +16,11 @@
                         <table class="table table-sm table-borderless">
                             <thead class="font-weight-bold">
                                 <tr>
-                                    <th scope="col">Item</th>
+                                    <th scope="col">ITEM</th>
                                     <th scope="col"></th>
-                                    <th scope="col">Price</th>
-                                    <th scope="col">Quantity</th>
-                                    <th scope="col">Total</th>
+                                    <th scope="col">PRICE</th>
+                                    <th scope="col">QUANTITY</th>
+                                    <th scope="col">TOTAL</th>
                                 </tr>
                             </thead>
                             {% for item in cart_items %}
@@ -30,25 +30,26 @@
                                     </td>
                                     <td class="py-3 text-left">
                                         <p>{{ item.item.name }}</p>
+                                        <p class="text-lowercase">{{ item.item.description }}</p>
                                     </td>
                                     <td class="py-3">
-                                        <p>{{ item.item.price }}</p>
+                                        <p>£{{ item.item.price }}</p>
                                     </td>
                                     <td class="py-3 w-25">
                                         <p>{{ item.quantity }}</p>
                                     </td>
                                     <td class="py-3">
-                                        <p>{{ item.item.price }}</p>
+                                        <p>£{{ item.item.price }}</p>
                                     </td>
                                 </tr>
                             {% endfor %}
                             <tr>
                                 <td colspan="5" class="text-right">
-                                    <h6><strong>Cart Total: £{{ total|floatformat:2 }}</strong></h6>
-                                    <h6>Delivery: £{{ delivery|floatformat:2 }}</h6>
-                                    <h4><strong>Grand Total: £{{ grand_total|floatformat:2 }}</strong></h4>
+                                    <h6 class="py-1">Cart Total:<strong> £{{ total|floatformat:2 }}</strong></h6>
+                                    <h6 class="py-1">Delivery: <strong>£{{ delivery|floatformat:2 }}</strong></h6>
+                                    <h4 class="py-1"><strong>Grand Total: £{{ grand_total|floatformat:2 }}</strong></h4>
                                     {% if free_delivery_delta > 0 %}
-                                        <p>You are eligible for free delivery if you spend <strong>£{{ free_delivery_delta }}</strong> more!</p>
+                                        <p class="py-1">You are eligible for <strong>FREE DELIVERY</strong> if you spend <strong>£{{ free_delivery_delta }}</strong> more!</p>
                                     {% endif %}
                                 </td>
                             </tr>
