--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -36,7 +36,26 @@
                                         <p>£{{ item.item.price }}</p>
                                     </td>
                                     <td class="py-3 w-25">
-                                        <p>{{ item.quantity }}</p>
+                                        <form class="update-form" method="POST" action="{% url 'adjust_cart' item.item_id %}">
+                                            {% csrf_token %}
+                                            <div class="form-group py-3">
+                                                <div class="input-group">
+                                                    <div class="input-group-prepend">
+                                                        <button class="decrement-qty btn btn-sm text-purple" data-item_id="1" id="decrement-qty">
+                                                            <i class="fas fa-minus fa-sm"></i>
+                                                        </button>
+                                                    </div>
+                                                    <input class="d-inline form-control form-control-sm w-25 qty_input" type="number" name="quantity" value="{{ item.quantity }}" min="1" max="99" data-item_id="2" id="id_qty">
+                                                    <div class="input-group-append">
+                                                        <button class="increment-qty btn btn-sm text-purple" data-item_id="3" id="increment-qty">
+                                                            <i class="fas fa-plus fa-sm"></i>
+                                                        </button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </form>
+                                        <a class="update-link text-info float-left"><small>Update</small></a>
+                                        <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}"><small>Remove</small></a>
                                     </td>
                                     <td class="py-3">
                                         <p>£{{ item.item.price }}</p>
@@ -71,4 +90,29 @@
         </div>
     </div>
 
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+{% include 'sweets/includes/quantity_input_script.html' %}
+<script type="text/javascript">
+    // Update quantity on click
+    $('.update-link').click(function(e) {
+        var form = $(this).prev('.update-form');
+        form.submit();
+    })
+
+    // Remove item and reload on click
+    $('.remove-item').click(function(e) {
+        var csrftoken = "{{ csrf_token }}";
+        var itemId = $(this).attr('id').split('remove_')[1];
+        var url = `/cart/remove/${itemId}`;
+        var data = {'csrfmiddlewaretoken': csrftoken};
+
+        $.post(url, data)
+            .done(function() {
+                location.reload();
+        });
+    })
+</script>
 {% endblock %}
