--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -75,7 +75,7 @@
                             </tr>
                             <tr>
                                 <td colspan="5" class="text-right">
-                                    <a href="" class="btn btn-lg purple-btn mx-2">Return</a>
+                                    <a href="{% url 'home' %}" class="btn btn-lg purple-btn mx-2">Return</a>
                                     <a href="" class="btn btn-lg pink-btn mx-2">Checkout</a>
                                 </td>
                             </tr>
