--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -36,6 +36,7 @@
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown2">
                     {% if request.user.is_authenticated %}
                         {% if request.user.is_superuser %}
+                                <a class="dropdown-item" href="{% url 'view_all_sweets' %}">Management - View all</a>
                                 <a class="dropdown-item" href="{% url 'add_bag' %}">Management - Add Bag</a>
                                 <a class="dropdown-item" href="{% url 'add_scoop' %}">Management - Add Scoop</a>
                         {% endif %}
