--- a/templates/includes/toasts/toast_error.html
+++ b/templates/includes/toasts/toast_error.html
@@ -1,3 +1,4 @@
+<!-- Toasts adapted from boutqiue ado tutorial -->
 <div class="toast" role="alert" data-autohide="false">
   <div class="toast-header bg-color-peach">
     <h5 class="mr-auto pt-1 text-purple">Error!</h5>
